@@ -6,6 +6,7 @@ HEAD, planned as v0.31
 - FSM editor highlights the current transition
 - Adds drivers with inverted output
 - Adds a minified circuit as a new shape for embedded circuits
+- Allows recovering from oscillations.
 
 v0.30, released on 3. February 2023
 - Added a search function
